<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>minecraft_model_studio</artifactId>
	<version>0.1.4</version>
	<name>Minecraft Model Studio</name>
	<packaging>jar</packaging>
	
	<parent>
        <groupId>firemerald</groupId>
        <artifactId>minecraft_model_studio_base</artifactId>
        <version>1.1</version>
		<relativePath>mcms.xml</relativePath>
    </parent>
	
	<properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyMMdd_HHmm</maven.build.timestamp.format>
		<buildNumber>${maven.build.timestamp}</buildNumber>
		<!-- Versions -->
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
        <java.version>1.8</java.version>
        <mvn.complilerplug.version>3.6.1</mvn.complilerplug.version>
		<mvn.jarplug.version>3.0.2</mvn.jarplug.version>
    </properties>
</project>